static/css/insurancesmart.css
body {
  display: block;
  max-width: 1600px;
  margin-right: auto;
  margin-left: auto;
  background-color: #f2f2f2;
  font-family: Roboto, sans-serif;
  color: #333;
  font-size: 18px;
  line-height: 28px;
}

body.no-scroll {
  overflow-y: hidden;
}

a {
  color: #274f63;
  text-decoration: none;
}

img {
  display: inline-block;
  max-width: 100%;
  margin-top: 20px;
  margin-bottom: 20px;
}

.close-qt-modal {
  cursor: pointer;
}

.qt-modal {
  display: none;
}

.qt-modal.active {
  display: block;
  display: -webkit-flex;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  justify-content: center;
  align-items: center;
  z-index: 101;
}

.qt-modal-content {
  position: relative;
}

.qt-modal-content > iframe {
  position: relative;
  margin: 50px 30px 30px 30px;
  width: 100vw;
  height: 80vh;
  max-width: 1000px;
  background: white;
  padding: 0px 0px 0px 20px;
}

.qt-modal-content > .close-qt-modal {
  background: #333333;
  height: 50px;
  display: block;
  display: -webkit-flex;
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  position: absolute;
  top: 0px;
  left: 30px;
  right: 30px;
  z-index: 1;
  text-align: center;
  flex-direction: column;
  -ms-flex-direction: column;
}

@media (max-width: 767px) {
  .qt-modal-content > iframe {
    margin: 0;
    padding-top: 50px;
    height: 100vh;
    /* zoom: 0.5;
    -moz-transform: scale(0.5);
    -moz-transform-origin: 0 0;
    -o-transform: scale(0.5);
    -o-transform-origin: 0 0;
    -webkit-transform: scale(0.5);
    -webkit-transform-origin: 0 0; */
  }
  .qt-modal-content > .close-qt-modal {
    left: 0;
    right: 0;
  }
}
.container {
  position: relative;
  display: block;
  width: 100%;
  max-width: 1440px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 30px;
  padding-left: 30px;
}

.container.flex-center {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.container.flex-left {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.container.blog {
  max-width: 1100px;
  margin-top: -400px;
}

.header {
  position: absolute;
  left: 0px;
  top: 0px;
  right: 0px;
  z-index: 100;
  display: block;
  margin-right: auto;
  margin-left: auto;
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 16px;
  line-height: 24px;
}

.header-content {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.logo {
  margin-right: 50px;
  color: #333;
  font-size: 35px;
  line-height: 35px;
  font-weight: 700;
  text-decoration: none;
  text-shadow: 0 0 21px hsla(0, 0%, 100%, .5);
}

.bold-text {
  color: #ffbc00;
}

.nav-wrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .3);
}

.nav-link {
  position: relative;
  padding: 15px 20px;
  color: #333;
  font-weight: 400;
  text-decoration: none;
  cursor: pointer;
}

.nav-link:hover {
  background-color: #f2f2f2;
}

.nav-link.phone {
  margin-top: auto;
  margin-bottom: auto;
  margin-left: 20px;
  border: 2px none #333;
  background-color: #ffbc00;
  color: #333;
  font-weight: 700;
}

.nav-link.dropdown-trigger {
  padding: 0px;
  cursor: default;
}

.nav-link.emphasis {
  font-weight: 700;
  text-decoration: underline;
}
.w-richtext p {
  line-height: 32px;
}
.w-richtext h2 {
  margin-top: 70px;
}
.w-richtext h3 {
  opacity: 0.85;
}
.w-richtext a {
  color: #eeae00;
}
.w-richtext a:hover {
  color: #d19900;
}

.hero-banner {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: visible;
  min-height: 600px;
  padding-top: 175px;
  padding-bottom: 175px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.homeQuoterOption {
  display: none;
}

.hero-content {
  position: relative;
  z-index: 1;
  width: 640px;
  padding-right: 20px;
  padding-left: 20px;
}

.hero-content.flex-grow {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.hero-content.flex-grow.hero-video-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-perspective: 868px;
  perspective: 868px;
  -webkit-perspective-origin: 50% 50%;
  perspective-origin: 50% 50%;
}

.heading {
  margin-top: 0px;
  font-size: 45px;
  line-height: 55px;
}
.section-light .hero-button {
  margin-bottom: 20px;
}
/* ... */

